--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 # Site settings
-title: BY Blog
+title: HeLiuzx Blog
 SEOTitle: 臭宝妈的博客 | HeLiuzx Blog
 header-img: img/post-bg-desk.jpg
 email: hughhw@gmail.com
-description: "Every failure is leading towards success."
-keyword: "HeLiuzx, HeLiuzx Blog, 臭宝妈的博客, choubaoma, 刘子瑄, iOS, Apple, iPhone"
+description: "My first tiny blog."
+keyword: "HeLiuzx, HeLiuzx Blog, 臭宝妈的博客, choubaoma, Liuzx, iOS, Apple, iPhone"
 url: "http://hughhw.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/hughhw/hughhw.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
+sidebar-about-description: "try to editing"
 sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
