--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: HeLiuzx Blog
+title: 爱理财的臭宝妈
 SEOTitle: 臭宝妈的博客 | HeLiuzx Blog
 header-img: img/post-bg-desk.jpg
-email: hughhw@gmail.com
-description: "My first tiny blog."
+email: me@heliuxz.cn
+description: "My first blog."
 keyword: "HeLiuzx, HeLiuzx Blog, 臭宝妈的博客, choubaoma, Liuzx, iOS, Apple, iPhone"
 url: "http://hughhw.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
@@ -11,8 +11,8 @@ github_repo: "https://github.com/hughhw/hughhw.github.io.git" # you code reposit
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "try to editing"
-sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "别犹豫，想到了就去做"
+sidebar-avatar: /img/about-LZX.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
