--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: 爱理财的臭宝妈
-SEOTitle: 臭宝妈的博客 | HeLiuzx Blog
+title: 吐槽女王臭宝妈
+SEOTitle: 吐槽女王臭宝妈的博客 | HeLiuzx Blog
 header-img: img/post-bg-desk.jpg
 email: me@heliuxz.cn
-description: "My first blog."
-keyword: "HeLiuzx, HeLiuzx Blog, 臭宝妈的博客, choubaoma, Liuzx, iOS, Apple, iPhone"
+description: "He Liu Zixuan's personal blog."
+keyword: "HeLiuzx, HeLiuzx Blog, 吐槽女王臭宝妈的博客，choubaoma, Liuzx, iOS, Apple, iPhone"
 url: "http://hughhw.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/hughhw/hughhw.github.io.git" # you code repository
@@ -57,16 +57,16 @@ kramdown:
 
 # 评论系统
 # Disqus（https://disqus.com/）
-# disqus_username: qiubaiying
+# disqus_username: heeddie
 
 # Gitalk
 gitalk:
   enable: true    #是否开启Gitalk评论
   clientID: f2c84e7629bb1446c1a4                            #生成的clientID
   clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
-  repo: qiubaiying.github.io    #仓库名称
-  owner: qiubaiying    #github用户名
-  admin: qiubaiying
+  repo: hughhw.github.io    #仓库名称
+  owner: hughhw    #github用户名
+  admin: hughhw
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
