--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: 吐槽女王臭宝妈
-SEOTitle: 吐槽女王臭宝妈的博客 | HeLiuzx Blog
+title: 臭宝妈瑄瑄
+SEOTitle: 臭宝妈瑄瑄的博客 | HeLiuzx Blog
 header-img: img/post-bg-desk.jpg
 email: me@heliuxz.cn
 description: "He Liu Zixuan's personal blog."
-keyword: "HeLiuzx, HeLiuzx Blog, 吐槽女王臭宝妈的博客，choubaoma, Liuzx, iOS, Apple, iPhone"
+keyword: "HeLiuzx, HeLiuzx Blog, 臭宝妈瑄瑄的博客，choubaoma, Liuzx, iOS, Apple, iPhone"
 url: "http://hughhw.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/hughhw/hughhw.github.io.git" # you code repository
@@ -19,7 +19,7 @@ sidebar-avatar: /img/about-LZX.jpg      # use absolute URL, seeing it's used in 
 # SNS settings
 RSS: false
 # weibo_username:     HeLiuzx
-zhihu_username:     HeLiuzx
+zhihu_username:     5b7e6d72afe6
 github_username:    HeLiuzx
 facebook_username:  HeLiuzx
 jianshu_username:   HeLiuzx
@@ -102,8 +102,8 @@ friends: [
         title: "WY",
         href: "http://zhengwuyang.com"
     },{
-        title: "简书·BY",
-        href: "http://www.jianshu.com/u/e71990ada2fd"
+        title: "简书·ME",
+        href: "http://www.jianshu.com/u/5b7e6d72afe6"
     },{
         title: "Apple",
         href: "https://apple.com"
