--- a/_config.yml
+++ b/_config.yml
@@ -19,10 +19,10 @@ sidebar-avatar: /img/about-LZX.jpg      # use absolute URL, seeing it's used in 
 # SNS settings
 RSS: false
 # weibo_username:     HeLiuzx
-zhihu_username:     5b7e6d72afe6
+zhihu_username:     HeLiuzx
 github_username:    HeLiuzx
 facebook_username:  HeLiuzx
-jianshu_username:   HeLiuzx
+jianshu_username:   5b7e6d72afe6
 #twitter_username:   HeLiuzx
 
 
