--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: 臭宝妈瑄瑄
-SEOTitle: 臭宝妈瑄瑄的博客 | HeLiuzx Blog
+title: 散户瑄瑄
+SEOTitle: 散户瑄瑄的博客 | HeLiuzx Blog
 header-img: img/post-bg-desk.jpg
 email: me@heliuxz.cn
-description: "He Liu Zixuan's personal blog."
-keyword: "HeLiuzx, HeLiuzx Blog, 臭宝妈瑄瑄的博客，choubaoma, Liuzx, iOS, Apple, iPhone"
+description: "Liu Zixuan's personal blog."
+keyword: "Liuzx, Liuzx Blog, 散户瑄瑄的博客，choubaoma, Liuzx, iOS, Apple, iPhone"
 url: "http://hughhw.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/hughhw/hughhw.github.io.git" # you code repository
